Working on a tiny bit more of styling to help visualize the page.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
   </head>
   <body>
 
+     <!-- Div container for entire game possibly?-->
+
     <!-- Div title for "Crystals Collector!"-->
     <div class="row">
-        <div class="col-12">
+        <div class="col-3">
             <div class="crystals">
             <h1>Crystals Collector!</h1>
-        </div>
+            </div>
         </div>
     </div>
 
     <!-- Div for rules of game -->
     <div class="row">
-        <div class="col-3">
+        <div class="col-4">
             <div class="rules">
                 <p>You will be given a random number at the start of the game.</p>
             <br>
@@ -39,9 +41,11 @@
 
     <!-- Div for random number shown -->
     <div class="row">
-        <div class="random">
-
-        </div>
+        <div class="col-2">
+            <div class="random">
+                <p>testing</p>
+            </div>
+       </div>
     </div>
     <!--Div for Wins and Losses -->
     <div class="row">
@@ -51,8 +55,10 @@
             </div>
             <div id="losses">
 
+            </div>
         </div>
     </div>
+
 
 
 
