Making headway with functionson click calls and random number generator.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- TItle "Crystals Collector!"-->
 <div class="container">
          <div class="row">
-            <div class="col-3">
+            <div class="col-4">
                 <div class="crystals">
                  <h1>Crystals Collector!</h1>
                </div>
@@ -49,7 +49,7 @@
         </div>
 
      <!-- Wins and Losses -->
-        <div class="col-1">
+        <div class="col-1.5">
                 <div class="w-l">
                     <p>Wins:</p>
                     <p>Losses:</p>
@@ -61,23 +61,23 @@
     <!-- Gems -->
     <div class="row">
         <div class="col-1">
-            <div class="gem1">
-                <img src="assets/images/gem1.png" class="img-fluid" alt="">
+            <div class="gem">
+                <img src="assets/images/gem1.png" class="img-fluid" alt="" data-cyrstalvalue="1, 2, 3,">
             </div>
         </div>
         <div class="col-1">
-            <div class="gem2">
-                <img src="assets/images/gem2.png" class="img-fluid" alt="">
+            <div class="gem">
+                <img src="assets/images/gem2.png" class="img-fluid" alt="" data-cyrstalvalue="4, 5, 6">
             </div>
         </div>
         <div class="col-1">
-            <div class="gem3">
-                <img src="assets/images/gem3.png" class="img-fluid" alt="">
+            <div class="gem">
+                <img src="assets/images/gem3.png" class="img-fluid" alt="" data-cyrstalvalue="7, 8, 9">
             </div>
         </div>
         <div class="col-1">
-            <div class="gem4">
-                <img src="assets/images/gem4.png" class="img-fluid" alt="">
+            <div class="gem">
+                <img src="assets/images/gem4.png" class="img-fluid" alt="" data-cyrstalvalue="10, 11, 12">
             </div>
         </div>
     </div>
