Last efforts of adding function to homework before handing it in.

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
     <!-- Gems -->
     <div class="row">
         <div class="col-1">
-            <div class="gem">
+            <div class="gem" id="blueGem">
                 <img src="assets/images/gem1.png" class="img-fluid" alt="" data-cyrstalvalue="1, 2, 3,">
             </div>
         </div>
         <div class="col-1">
-            <div class="gem">
+            <div class="gem" id="greenGem">
                 <img src="assets/images/gem2.png" class="img-fluid" alt="" data-cyrstalvalue="4, 5, 6">
             </div>
         </div>
         <div class="col-1">
-            <div class="gem">
+            <div class="gem" id="redGem">
                 <img src="assets/images/gem3.png" class="img-fluid" alt="" data-cyrstalvalue="7, 8, 9">
             </div>
         </div>
         <div class="col-1">
-            <div class="gem">
+            <div class="gem" id="purpleGem">
                 <img src="assets/images/gem4.png" class="img-fluid" alt="" data-cyrstalvalue="10, 11, 12">
             </div>
         </div>
